# bump

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  azure-pipelines.yml  install.sh  justfile
.azure-pipelines/: check.yml
.dependabot/: config.yaml
.github/: dependabot.yml  main.workflow
.github/workflows/: ci.yml  container.yaml  coverage.yaml  cron-security.yaml  main.yml  release.yaml  security.yaml  tag.yaml  test.yaml
src/: args.rs  error.rs  fs.rs  lib.rs  main.rs  version.rs
tests/: test_cli.rs
