[package]
name        = "bump-bin"
version     = "0.3.3"
authors     = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude     = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
readme      = "README.md"
edition     = "2018"
license     = "MIT/Apache-2.0"
description = "Increments version with semver specification"
repository  = "https://github.com/watawuwu/bump"
keywords    = ["semver", "cli", "version", "bump"]
categories  = ["command-line-utilities", "text-processing"]

[[bin]]
name = "bump"
path = "src/main.rs"

[badges]
is-it-maintained-issue-resolution = { repository = "watawuwu/bump", service = "github" }
is-it-maintained-open-issues      = { repository = "watawuwu/bump", service = "github" }
maintenance                       = { status = "passively-maintained" }

[dependencies]
anyhow            = "1.0"
log               = "0.4"
pretty_env_logger = "0.4"
structopt         = "0.3"
semver            = "0.9"
regex             = "1.2"
lazy_static       = "1.3"
exitcode          = "1.1"
atty              = "0.2"

[features]
default = []

[dev-dependencies]
tempdir    = "0.3"
assert_cmd = "1.0"
predicates = "1.0"
