[package]
name        = "bump-bin"
version     = "0.3.3"
authors     = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude     = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
readme      = "README.md"
edition     = "2018"
license     = "MIT OR Apache-2.0"
description = "Increments version with semver specification"
repository  = "https://github.com/watawuwu/bump"
keywords    = ["semver", "cli", "version", "bump"]
categories  = ["command-line-utilities", "text-processing"]

[[bin]]
name = "bump"
path = "src/main.rs"

[badges]
is-it-maintained-issue-resolution = { repository = "watawuwu/bump", service = "github" }
is-it-maintained-open-issues      = { repository = "watawuwu/bump", service = "github" }
maintenance                       = { status = "passively-maintained" }

[dependencies]
anyhow            = "1"
log               = "0"
pretty_env_logger = "0"
structopt         = "0"
semver            = "1"
regex             = "1"
lazy_static       = "1"
exitcode          = "1"
atty              = "0"

[features]
default = []

[dev-dependencies]
tempfile   = "3"
assert_cmd = "1"
predicates = "2"
